Literally just fix spacing

--- a/src/Components/styles/MyEventPage.css
+++ b/src/Components/styles/MyEventPage.css
@@ -1,6 +1,6 @@
 #main-content{
     z-index: 1;
-    margin-top: -3rem;
+    margin-top: -5rem;
 }
 
 .tab {
